{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 402,
  "lineage": "fdceaab4-67b2-b8bd-f54c-935a8cf47115",
  "resources": [
    {
      "module": "module.Appgw_central",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/backendAddressPools/appgw-centralus-pool",
                "ip_addresses": [],
                "name": "appgw-centralus-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/backendHttpSettingsCollection/appgw-centralus-settings",
                "name": "appgw-centralus-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/frontendIPConfigurations/appgw-centralus-feipconf",
                "name": "appgw-centralus-feipconf",
                "private_ip_address": "10.110.0.10",
                "private_ip_address_allocation": "Static",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01/subnets/Apps"
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/frontendPorts/appgw-centralus-feport",
                "name": "appgw-centralus-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/gatewayIPConfigurations/appgw-centralus-ipconf",
                "name": "appgw-centralus-ipconf",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01/subnets/Apps"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/frontendIPConfigurations/appgw-centralus-feipconf",
                "frontend_ip_configuration_name": "appgw-centralus-feipconf",
                "frontend_port_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/frontendPorts/appgw-centralus-feport",
                "frontend_port_name": "appgw-centralus-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/httpListeners/http-traffic",
                "name": "http-traffic",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus",
            "identity": [],
            "location": "centralus",
            "name": "appgw-centralus",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/backendAddressPools/appgw-centralus-pool",
                "backend_address_pool_name": "appgw-centralus-pool",
                "backend_http_settings_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/backendHttpSettingsCollection/appgw-centralus-settings",
                "backend_http_settings_name": "appgw-centralus-settings",
                "http_listener_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/httpListeners/http-traffic",
                "http_listener_name": "http-traffic",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/requestRoutingRules/appgw-centralus-rule",
                "name": "appgw-centralus-rule",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_Medium",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_central.azurerm_subnet.appgw",
            "module.Appgw_central.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_central",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "appvmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/centralusapp01-vmnic",
            "internal_domain_name_suffix": "w4irfvdzxxtu1nhidv1pwhn3tf.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "centralusapp01-ipcfg",
                "primary": true,
                "private_ip_address": "10.110.1.101",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01/subnets/Backend"
              }
            ],
            "location": "centralus",
            "mac_address": "00-0D-3A-A6-4E-A6",
            "name": "centralusapp01-vmnic",
            "private_ip_address": "10.110.1.101",
            "private_ip_addresses": [
              "10.110.1.101"
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "virtual_machine_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Compute/virtualMachines/centralus-web01"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_central.azurerm_subnet.backend",
            "module.Appgw_central.azurerm_virtual_network.app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/centralusapp02-vmnic",
            "internal_domain_name_suffix": "w4irfvdzxxtu1nhidv1pwhn3tf.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "centralusapp02-ipcfg",
                "primary": true,
                "private_ip_address": "10.110.1.102",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01/subnets/Backend"
              }
            ],
            "location": "centralus",
            "mac_address": "00-0D-3A-A6-44-92",
            "name": "centralusapp02-vmnic",
            "private_ip_address": "10.110.1.102",
            "private_ip_addresses": [
              "10.110.1.102"
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "virtual_machine_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Compute/virtualMachines/centralus-web02"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_central.azurerm_subnet.backend",
            "module.Appgw_central.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_central",
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "appgwnic-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/backendAddressPools/appgw-centralus-pool",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/centralusapp01-vmnic/ipConfigurations/centralusapp01-ipcfg|/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/backendAddressPools/appgw-centralus-pool",
            "ip_configuration_name": "centralusapp01-ipcfg",
            "network_interface_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/centralusapp01-vmnic"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_central.azurerm_application_gateway.appgw_web",
            "module.Appgw_central.azurerm_network_interface.appvmnic",
            "module.Appgw_central.azurerm_subnet.appgw",
            "module.Appgw_central.azurerm_subnet.backend",
            "module.Appgw_central.azurerm_virtual_network.app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/backendAddressPools/appgw-centralus-pool",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/centralusapp02-vmnic/ipConfigurations/centralusapp02-ipcfg|/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-centralus/backendAddressPools/appgw-centralus-pool",
            "ip_configuration_name": "centralusapp02-ipcfg",
            "network_interface_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/centralusapp02-vmnic"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_central.azurerm_application_gateway.appgw_web",
            "module.Appgw_central.azurerm_network_interface.appvmnic",
            "module.Appgw_central.azurerm_subnet.appgw",
            "module.Appgw_central.azurerm_subnet.backend",
            "module.Appgw_central.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_central",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "appgw_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkSecurityGroups/web-centralus-nsg",
            "location": "centralus",
            "name": "web-centralus-nsg",
            "resource_group_name": "tcs-azcloud-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow HTTP",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_central",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.110.0.0/24",
            "address_prefixes": [
              "10.110.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01/subnets/Apps",
            "name": "Apps",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-centralus-01"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_central.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_central",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.110.1.0/24",
            "address_prefixes": [
              "10.110.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01/subnets/Backend",
            "name": "Backend",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-centralus-01"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_central.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_central",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01/subnets/Backend",
            "network_security_group_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkSecurityGroups/web-centralus-nsg",
            "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01/subnets/Backend"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_central.azurerm_network_security_group.appgw_nsg",
            "module.Appgw_central.azurerm_subnet.backend",
            "module.Appgw_central.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_central",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.110.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d41291b7-bd79-4de7-b4e8-1d76fb1dbd9d",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01",
            "location": "centralus",
            "name": "vnet-centralus-01",
            "resource_group_name": "tcs-azcloud-rg",
            "subnet": [
              {
                "address_prefix": "10.110.0.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01/subnets/Apps",
                "name": "Apps"
              },
              {
                "address_prefix": "10.110.1.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01/subnets/Backend",
                "name": "Backend",
                "security_group": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkSecurityGroups/web-centralus-nsg"
              }
            ],
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_east",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/backendAddressPools/appgw-eastus-pool",
                "ip_addresses": [],
                "name": "appgw-eastus-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/backendHttpSettingsCollection/appgw-eastus-settings",
                "name": "appgw-eastus-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/frontendIPConfigurations/appgw-eastus-feipconf",
                "name": "appgw-eastus-feipconf",
                "private_ip_address": "10.210.0.10",
                "private_ip_address_allocation": "Static",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01/subnets/Apps"
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/frontendPorts/appgw-eastus-feport",
                "name": "appgw-eastus-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/gatewayIPConfigurations/appgw-eastus-ipconf",
                "name": "appgw-eastus-ipconf",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01/subnets/Apps"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/frontendIPConfigurations/appgw-eastus-feipconf",
                "frontend_ip_configuration_name": "appgw-eastus-feipconf",
                "frontend_port_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/frontendPorts/appgw-eastus-feport",
                "frontend_port_name": "appgw-eastus-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/httpListeners/http-traffic",
                "name": "http-traffic",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus",
            "identity": [],
            "location": "eastus",
            "name": "appgw-eastus",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/backendAddressPools/appgw-eastus-pool",
                "backend_address_pool_name": "appgw-eastus-pool",
                "backend_http_settings_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/backendHttpSettingsCollection/appgw-eastus-settings",
                "backend_http_settings_name": "appgw-eastus-settings",
                "http_listener_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/httpListeners/http-traffic",
                "http_listener_name": "http-traffic",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/requestRoutingRules/appgw-eastus-rule",
                "name": "appgw-eastus-rule",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_Medium",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_east.azurerm_subnet.appgw",
            "module.Appgw_east.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_east",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "appvmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/eastusapp01-vmnic",
            "internal_domain_name_suffix": "b1uixdsfitvevjkqpdy30hrsgf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "eastusapp01-ipcfg",
                "primary": true,
                "private_ip_address": "10.210.1.101",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01/subnets/Backend"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9C-2E-47",
            "name": "eastusapp01-vmnic",
            "private_ip_address": "10.210.1.101",
            "private_ip_addresses": [
              "10.210.1.101"
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "virtual_machine_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Compute/virtualMachines/eastus-web01"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_east.azurerm_subnet.backend",
            "module.Appgw_east.azurerm_virtual_network.app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/eastusapp02-vmnic",
            "internal_domain_name_suffix": "b1uixdsfitvevjkqpdy30hrsgf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "eastusapp02-ipcfg",
                "primary": true,
                "private_ip_address": "10.210.1.102",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01/subnets/Backend"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-21-AF-94",
            "name": "eastusapp02-vmnic",
            "private_ip_address": "10.210.1.102",
            "private_ip_addresses": [
              "10.210.1.102"
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "virtual_machine_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Compute/virtualMachines/eastus-web02"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_east.azurerm_subnet.backend",
            "module.Appgw_east.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_east",
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "appgwnic-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/backendAddressPools/appgw-eastus-pool",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/eastusapp01-vmnic/ipConfigurations/eastusapp01-ipcfg|/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/backendAddressPools/appgw-eastus-pool",
            "ip_configuration_name": "eastusapp01-ipcfg",
            "network_interface_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/eastusapp01-vmnic"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_east.azurerm_application_gateway.appgw_web",
            "module.Appgw_east.azurerm_network_interface.appvmnic",
            "module.Appgw_east.azurerm_subnet.appgw",
            "module.Appgw_east.azurerm_subnet.backend",
            "module.Appgw_east.azurerm_virtual_network.app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/backendAddressPools/appgw-eastus-pool",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/eastusapp02-vmnic/ipConfigurations/eastusapp02-ipcfg|/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/applicationGateways/appgw-eastus/backendAddressPools/appgw-eastus-pool",
            "ip_configuration_name": "eastusapp02-ipcfg",
            "network_interface_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/eastusapp02-vmnic"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_east.azurerm_application_gateway.appgw_web",
            "module.Appgw_east.azurerm_network_interface.appvmnic",
            "module.Appgw_east.azurerm_subnet.appgw",
            "module.Appgw_east.azurerm_subnet.backend",
            "module.Appgw_east.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_east",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "appgw_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkSecurityGroups/web-eastus-nsg",
            "location": "eastus",
            "name": "web-eastus-nsg",
            "resource_group_name": "tcs-azcloud-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow HTTP",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_east",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.210.0.0/24",
            "address_prefixes": [
              "10.210.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01/subnets/Apps",
            "name": "Apps",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-eastus-01"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_east.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_east",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.210.1.0/24",
            "address_prefixes": [
              "10.210.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01/subnets/Backend",
            "name": "Backend",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-eastus-01"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_east.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_east",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01/subnets/Backend",
            "network_security_group_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkSecurityGroups/web-eastus-nsg",
            "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01/subnets/Backend"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Appgw_east.azurerm_network_security_group.appgw_nsg",
            "module.Appgw_east.azurerm_subnet.backend",
            "module.Appgw_east.azurerm_virtual_network.app"
          ]
        }
      ]
    },
    {
      "module": "module.Appgw_east",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.210.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8e8be80e-4445-4aea-a550-78f1dd1e3235",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01",
            "location": "eastus",
            "name": "vnet-eastus-01",
            "resource_group_name": "tcs-azcloud-rg",
            "subnet": [
              {
                "address_prefix": "10.210.0.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01/subnets/Apps",
                "name": "Apps"
              },
              {
                "address_prefix": "10.210.1.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01/subnets/Backend",
                "name": "Backend",
                "security_group": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkSecurityGroups/web-eastus-nsg"
              }
            ],
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_centralus",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hubapps-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/centralusapps-nic",
            "internal_domain_name_suffix": "2udr3w3c3hxujiha4qzwrncg1b.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "centralusapps-ipcfg",
                "primary": true,
                "private_ip_address": "10.100.4.100",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/Apps-centralus"
              }
            ],
            "location": "centralus",
            "mac_address": "00-22-48-46-F0-3B",
            "name": "centralusapps-nic",
            "private_ip_address": "10.100.4.100",
            "private_ip_addresses": [
              "10.100.4.100"
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "centralusapps-nic",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "virtual_machine_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Compute/virtualMachines/centralus-apps"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_subnet.apps",
            "module.Hub_centralus.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_centralus",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hubsrv-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/centralussrv-nic",
            "internal_domain_name_suffix": "2udr3w3c3hxujiha4qzwrncg1b.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "centralussrv-ipcfg",
                "primary": true,
                "private_ip_address": "10.100.5.100",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/Servers-centralus"
              }
            ],
            "location": "centralus",
            "mac_address": "00-22-48-46-FD-8F",
            "name": "centralussrv-nic",
            "private_ip_address": "10.100.5.100",
            "private_ip_addresses": [
              "10.100.5.100"
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "centralussrv-nic",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "virtual_machine_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Compute/virtualMachines/centralus-srv"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_subnet.servers",
            "module.Hub_centralus.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_centralus",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bst-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/publicIPAddresses/bst-centralus-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.106.31.108",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "bst-centralus-pip",
            "resource_group_name": "tcs-azcloud-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "bst-centralus-pip",
              "ResourceGroup": "tcs-azcloud-rg"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_centralus",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.4.0/24",
            "address_prefixes": [
              "10.100.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/Apps-centralus",
            "name": "Apps-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_centralus",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.1.0/24",
            "address_prefixes": [
              "10.100.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_centralus",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.2.0/24",
            "address_prefixes": [
              "10.100.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_centralus",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "fw-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.3.0/24",
            "address_prefixes": [
              "10.100.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/AzureFirewallManagementSubnet",
            "name": "AzureFirewallManagementSubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_centralus",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.0.0/24",
            "address_prefixes": [
              "10.100.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_centralus",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.5.0/24",
            "address_prefixes": [
              "10.100.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/Servers-centralus",
            "name": "Servers-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_centralus",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.100.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "db1e07e5-e9a2-44ef-a0e0-f43368b446d9",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus",
            "location": "centralus",
            "name": "vnet-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "subnet": [
              {
                "address_prefix": "10.100.0.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.100.1.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.100.2.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.100.3.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/AzureFirewallManagementSubnet",
                "name": "AzureFirewallManagementSubnet"
              },
              {
                "address_prefix": "10.100.4.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/Apps-centralus",
                "name": "Apps-centralus"
              },
              {
                "address_prefix": "10.100.5.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/Servers-centralus",
                "name": "Servers-centralus"
              }
            ],
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name:": "vnet-centralus",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_east",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hubapps-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/eastusapps-nic",
            "internal_domain_name_suffix": "q3mmboa1c1leld55uoi4ocmyrd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "eastusapps-ipcfg",
                "primary": true,
                "private_ip_address": "10.200.4.100",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/Apps-eastus"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-23-0A-DE",
            "name": "eastusapps-nic",
            "private_ip_address": "10.200.4.100",
            "private_ip_addresses": [
              "10.200.4.100"
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "eastusapps-nic",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "virtual_machine_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Compute/virtualMachines/eastus-apps"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_subnet.apps",
            "module.Hub_east.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_east",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hubsrv-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/eastussrv-nic",
            "internal_domain_name_suffix": "q3mmboa1c1leld55uoi4ocmyrd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "eastussrv-ipcfg",
                "primary": true,
                "private_ip_address": "10.200.5.100",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/Servers-eastus"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-35-9A-C9",
            "name": "eastussrv-nic",
            "private_ip_address": "10.200.5.100",
            "private_ip_addresses": [
              "10.200.5.100"
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "eastussrv-nic",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "virtual_machine_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Compute/virtualMachines/eastus-srv"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_subnet.servers",
            "module.Hub_east.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_east",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bst-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/publicIPAddresses/bst-eastus-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.255.230.126",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "bst-eastus-pip",
            "resource_group_name": "tcs-azcloud-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "bst-eastus-pip",
              "ResourceGroup": "tcs-azcloud-rg"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_east",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.200.4.0/24",
            "address_prefixes": [
              "10.200.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/Apps-eastus",
            "name": "Apps-eastus",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-eastus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_east",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.200.1.0/24",
            "address_prefixes": [
              "10.200.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-eastus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_east",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.200.2.0/24",
            "address_prefixes": [
              "10.200.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-eastus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_east",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "fw-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.200.3.0/24",
            "address_prefixes": [
              "10.200.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/AzureFirewallManagementSubnet",
            "name": "AzureFirewallManagementSubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-eastus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_east",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.200.0.0/24",
            "address_prefixes": [
              "10.200.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-eastus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_east",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.200.5.0/24",
            "address_prefixes": [
              "10.200.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/Servers-eastus",
            "name": "Servers-eastus",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-eastus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub_east",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.200.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b8c05887-161b-45d6-8fff-a391e709988b",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus",
            "location": "eastus",
            "name": "vnet-eastus",
            "resource_group_name": "tcs-azcloud-rg",
            "subnet": [
              {
                "address_prefix": "10.200.0.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.200.1.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.200.2.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.200.3.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/AzureFirewallManagementSubnet",
                "name": "AzureFirewallManagementSubnet"
              },
              {
                "address_prefix": "10.200.4.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/Apps-eastus",
                "name": "Apps-eastus"
              },
              {
                "address_prefix": "10.200.5.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/Servers-eastus",
                "name": "Servers-eastus"
              }
            ],
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name:": "vnet-eastus",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.centralappgw_peering",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.100.0.0/16"
            ],
            "guid": "db1e07e5-e9a2-44ef-a0e0-f43368b446d9",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus",
            "location": "centralus",
            "name": "vnet-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "subnets": [
              "Servers-centralus",
              "AzureFirewallSubnet",
              "AzureBastionSubnet",
              "GatewaySubnet",
              "Apps-centralus",
              "AzureFirewallManagementSubnet"
            ],
            "vnet_peerings": {
              "vnet-centralus-to-vnet-eastus": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus"
            }
          }
        }
      ]
    },
    {
      "module": "module.centralappgw_peering",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.110.0.0/16"
            ],
            "guid": "d41291b7-bd79-4de7-b4e8-1d76fb1dbd9d",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01",
            "location": "centralus",
            "name": "vnet-centralus-01",
            "resource_group_name": "tcs-azcloud-rg",
            "subnets": [
              "Apps",
              "Backend"
            ]
          }
        }
      ]
    },
    {
      "module": "module.centralappgw_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/virtualNetworkPeerings/vnet-centralus-to-vnet-centralus-01",
            "name": "vnet-centralus-to-vnet-centralus-01",
            "remote_virtual_network_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01",
            "resource_group_name": "tcs-azcloud-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-centralus"
          },
          "dependencies": [
            "module.centralappgw_peering.data.azurerm_virtual_network.vnet_01",
            "module.centralappgw_peering.data.azurerm_virtual_network.vnet_02"
          ]
        }
      ]
    },
    {
      "module": "module.centralappgw_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-01/virtualNetworkPeerings/vnet-centralus-01-to-vnet-centralus",
            "name": "vnet-centralus-01-to-vnet-centralus",
            "remote_virtual_network_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-centralus-01"
          },
          "dependencies": [
            "module.centralappgw_peering.data.azurerm_virtual_network.vnet_01",
            "module.centralappgw_peering.data.azurerm_virtual_network.vnet_02"
          ]
        }
      ]
    },
    {
      "module": "module.centralspoke_peering",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.100.0.0/16"
            ],
            "guid": "db1e07e5-e9a2-44ef-a0e0-f43368b446d9",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus",
            "location": "centralus",
            "name": "vnet-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "subnets": [
              "Servers-centralus",
              "AzureFirewallSubnet",
              "AzureBastionSubnet",
              "GatewaySubnet",
              "Apps-centralus",
              "AzureFirewallManagementSubnet"
            ],
            "vnet_peerings": {
              "vnet-centralus-to-vnet-eastus": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus"
            }
          }
        }
      ]
    },
    {
      "module": "module.centralspoke_peering",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.120.0.0/16"
            ],
            "guid": "8b88304c-bacb-4db2-b63f-807585594905",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-02",
            "location": "centralus",
            "name": "vnet-centralus-02",
            "resource_group_name": "tcs-azcloud-rg",
            "subnets": [
              "vm"
            ]
          }
        }
      ]
    },
    {
      "module": "module.centralspoke_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/virtualNetworkPeerings/vnet-centralus-to-vnet-centralus-02",
            "name": "vnet-centralus-to-vnet-centralus-02",
            "remote_virtual_network_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-02",
            "resource_group_name": "tcs-azcloud-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-centralus"
          },
          "dependencies": [
            "module.centralspoke_peering.data.azurerm_virtual_network.vnet_01",
            "module.centralspoke_peering.data.azurerm_virtual_network.vnet_02"
          ]
        }
      ]
    },
    {
      "module": "module.centralspoke_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-02/virtualNetworkPeerings/vnet-centralus-02-to-vnet-centralus",
            "name": "vnet-centralus-02-to-vnet-centralus",
            "remote_virtual_network_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-centralus-02"
          },
          "dependencies": [
            "module.centralspoke_peering.data.azurerm_virtual_network.vnet_01",
            "module.centralspoke_peering.data.azurerm_virtual_network.vnet_02"
          ]
        }
      ]
    },
    {
      "module": "module.eastappgw_peering",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.200.0.0/16"
            ],
            "guid": "b8c05887-161b-45d6-8fff-a391e709988b",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus",
            "location": "eastus",
            "name": "vnet-eastus",
            "resource_group_name": "tcs-azcloud-rg",
            "subnets": [
              "GatewaySubnet",
              "AzureFirewallSubnet",
              "Servers-eastus",
              "Apps-eastus",
              "AzureBastionSubnet",
              "AzureFirewallManagementSubnet"
            ],
            "vnet_peerings": {
              "vnet-eastus-to-vnet-centralus": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus"
            }
          }
        }
      ]
    },
    {
      "module": "module.eastappgw_peering",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.210.0.0/16"
            ],
            "guid": "8e8be80e-4445-4aea-a550-78f1dd1e3235",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01",
            "location": "eastus",
            "name": "vnet-eastus-01",
            "resource_group_name": "tcs-azcloud-rg",
            "subnets": [
              "Apps",
              "Backend"
            ]
          }
        }
      ]
    },
    {
      "module": "module.eastappgw_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/virtualNetworkPeerings/vnet-eastus-to-vnet-eastus-01",
            "name": "vnet-eastus-to-vnet-eastus-01",
            "remote_virtual_network_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01",
            "resource_group_name": "tcs-azcloud-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-eastus"
          },
          "dependencies": [
            "module.eastappgw_peering.data.azurerm_virtual_network.vnet_01",
            "module.eastappgw_peering.data.azurerm_virtual_network.vnet_02"
          ]
        }
      ]
    },
    {
      "module": "module.eastappgw_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-01/virtualNetworkPeerings/vnet-eastus-01-to-vnet-eastus",
            "name": "vnet-eastus-01-to-vnet-eastus",
            "remote_virtual_network_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus",
            "resource_group_name": "tcs-azcloud-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-eastus-01"
          },
          "dependencies": [
            "module.eastappgw_peering.data.azurerm_virtual_network.vnet_01",
            "module.eastappgw_peering.data.azurerm_virtual_network.vnet_02"
          ]
        }
      ]
    },
    {
      "module": "module.eastspoke_peering",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.100.0.0/16"
            ],
            "guid": "db1e07e5-e9a2-44ef-a0e0-f43368b446d9",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus",
            "location": "centralus",
            "name": "vnet-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "subnets": [
              "Servers-centralus",
              "AzureFirewallSubnet",
              "AzureBastionSubnet",
              "GatewaySubnet",
              "Apps-centralus",
              "AzureFirewallManagementSubnet"
            ],
            "vnet_peerings": {
              "vnet-centralus-to-vnet-eastus": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus"
            }
          }
        }
      ]
    },
    {
      "module": "module.eastspoke_peering",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.220.0.0/16"
            ],
            "guid": "55680f3c-73eb-4bb2-8d0b-89e8041a074f",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-02",
            "location": "eastus",
            "name": "vnet-eastus-02",
            "resource_group_name": "tcs-azcloud-rg",
            "subnets": [
              "vm"
            ]
          }
        }
      ]
    },
    {
      "module": "module.eastspoke_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/virtualNetworkPeerings/vnet-centralus-to-vnet-eastus-02",
            "name": "vnet-centralus-to-vnet-eastus-02",
            "remote_virtual_network_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-02",
            "resource_group_name": "tcs-azcloud-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-centralus"
          },
          "dependencies": [
            "module.eastspoke_peering.data.azurerm_virtual_network.vnet_01",
            "module.eastspoke_peering.data.azurerm_virtual_network.vnet_02"
          ]
        }
      ]
    },
    {
      "module": "module.eastspoke_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-02/virtualNetworkPeerings/vnet-eastus-02-to-vnet-centralus",
            "name": "vnet-eastus-02-to-vnet-centralus",
            "remote_virtual_network_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-eastus-02"
          },
          "dependencies": [
            "module.eastspoke_peering.data.azurerm_virtual_network.vnet_01",
            "module.eastspoke_peering.data.azurerm_virtual_network.vnet_02"
          ]
        }
      ]
    },
    {
      "module": "module.fw-centralus",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "fw-sbnt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.2.0/24",
            "address_prefixes": [
              "10.100.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-centralus"
          }
        }
      ]
    },
    {
      "module": "module.fw-centralus",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "fwmgmt-sbnt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.3.0/24",
            "address_prefixes": [
              "10.100.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/AzureFirewallManagementSubnet",
            "name": "AzureFirewallManagementSubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "route_table_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/routeTables/65697c4a-a89f-425d-aaec-e513de7fb90d",
            "virtual_network_name": "vnet-centralus"
          }
        }
      ]
    },
    {
      "module": "module.fw-centralus",
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "fw-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "fw-centralus",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/azureFirewalls/fw-centralus/networkRuleCollections/centralus-netrulecol",
            "name": "centralus-netrulecol",
            "priority": 110,
            "resource_group_name": "tcs-azcloud-rg",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "*"
                ],
                "destination_fqdns": [],
                "destination_ip_groups": [],
                "destination_ports": [
                  "*"
                ],
                "name": "Allow-All",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": []
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_bastion_host.bst-host",
            "module.Hub_centralus.azurerm_network_interface.hubapps-nic",
            "module.Hub_centralus.azurerm_network_interface.hubsrv-nic",
            "module.Hub_centralus.azurerm_public_ip.bst-pip",
            "module.Hub_centralus.azurerm_subnet.apps",
            "module.Hub_centralus.azurerm_subnet.bastion",
            "module.Hub_centralus.azurerm_subnet.fw",
            "module.Hub_centralus.azurerm_subnet.fw-mgmt",
            "module.Hub_centralus.azurerm_subnet.gw",
            "module.Hub_centralus.azurerm_subnet.servers",
            "module.Hub_centralus.azurerm_virtual_network.hub",
            "module.Hub_centralus.azurerm_windows_virtual_machine.apps-vm",
            "module.Hub_centralus.azurerm_windows_virtual_machine.srv-vm",
            "module.fw-centralus.azurerm_firewall.fw",
            "module.fw-centralus.azurerm_public_ip.fw-mgmt-pip",
            "module.fw-centralus.azurerm_public_ip.fw-pip",
            "module.fw-centralus.data.azurerm_subnet.fw-sbnt",
            "module.fw-centralus.data.azurerm_subnet.fwmgmt-sbnt"
          ]
        }
      ]
    },
    {
      "module": "module.fw-centralus",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw-mgmt-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/publicIPAddresses/fwmgmt-centralus-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.109.242.68",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "fwmgmt-centralus-pip",
            "resource_group_name": "tcs-azcloud-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "fwmgmt-centralus-pip",
              "ResourceGroup": "tcs-azcloud-rg"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_bastion_host.bst-host",
            "module.Hub_centralus.azurerm_network_interface.hubapps-nic",
            "module.Hub_centralus.azurerm_network_interface.hubsrv-nic",
            "module.Hub_centralus.azurerm_public_ip.bst-pip",
            "module.Hub_centralus.azurerm_subnet.apps",
            "module.Hub_centralus.azurerm_subnet.bastion",
            "module.Hub_centralus.azurerm_subnet.fw",
            "module.Hub_centralus.azurerm_subnet.fw-mgmt",
            "module.Hub_centralus.azurerm_subnet.gw",
            "module.Hub_centralus.azurerm_subnet.servers",
            "module.Hub_centralus.azurerm_virtual_network.hub",
            "module.Hub_centralus.azurerm_windows_virtual_machine.apps-vm",
            "module.Hub_centralus.azurerm_windows_virtual_machine.srv-vm"
          ]
        }
      ]
    },
    {
      "module": "module.fw-centralus",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/publicIPAddresses/fw-centralus-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.109.242.73",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "fw-centralus-pip",
            "resource_group_name": "tcs-azcloud-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "fw-centralus-pip",
              "ResourceGroup": "tcs-azcloud-rg"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_bastion_host.bst-host",
            "module.Hub_centralus.azurerm_network_interface.hubapps-nic",
            "module.Hub_centralus.azurerm_network_interface.hubsrv-nic",
            "module.Hub_centralus.azurerm_public_ip.bst-pip",
            "module.Hub_centralus.azurerm_subnet.apps",
            "module.Hub_centralus.azurerm_subnet.bastion",
            "module.Hub_centralus.azurerm_subnet.fw",
            "module.Hub_centralus.azurerm_subnet.fw-mgmt",
            "module.Hub_centralus.azurerm_subnet.gw",
            "module.Hub_centralus.azurerm_subnet.servers",
            "module.Hub_centralus.azurerm_virtual_network.hub",
            "module.Hub_centralus.azurerm_windows_virtual_machine.apps-vm",
            "module.Hub_centralus.azurerm_windows_virtual_machine.srv-vm"
          ]
        }
      ]
    },
    {
      "module": "module.fw-east",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "fw-sbnt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.200.2.0/24",
            "address_prefixes": [
              "10.200.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-eastus"
          }
        }
      ]
    },
    {
      "module": "module.fw-east",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "fwmgmt-sbnt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.200.3.0/24",
            "address_prefixes": [
              "10.200.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/AzureFirewallManagementSubnet",
            "name": "AzureFirewallManagementSubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "route_table_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/routeTables/bb8054ac-4eb2-45dc-a229-14f46539c8c0",
            "virtual_network_name": "vnet-eastus"
          }
        }
      ]
    },
    {
      "module": "module.fw-east",
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "fw-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "fw-eastus",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/azureFirewalls/fw-eastus/networkRuleCollections/eastus-netrulecol",
            "name": "eastus-netrulecol",
            "priority": 110,
            "resource_group_name": "tcs-azcloud-rg",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "*"
                ],
                "destination_fqdns": [],
                "destination_ip_groups": [],
                "destination_ports": [
                  "*"
                ],
                "name": "Allow-All",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": []
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_bastion_host.bst-host",
            "module.Hub_east.azurerm_network_interface.hubapps-nic",
            "module.Hub_east.azurerm_network_interface.hubsrv-nic",
            "module.Hub_east.azurerm_public_ip.bst-pip",
            "module.Hub_east.azurerm_subnet.apps",
            "module.Hub_east.azurerm_subnet.bastion",
            "module.Hub_east.azurerm_subnet.fw",
            "module.Hub_east.azurerm_subnet.fw-mgmt",
            "module.Hub_east.azurerm_subnet.gw",
            "module.Hub_east.azurerm_subnet.servers",
            "module.Hub_east.azurerm_virtual_network.hub",
            "module.Hub_east.azurerm_windows_virtual_machine.apps-vm",
            "module.Hub_east.azurerm_windows_virtual_machine.srv-vm",
            "module.fw-east.azurerm_firewall.fw",
            "module.fw-east.azurerm_public_ip.fw-mgmt-pip",
            "module.fw-east.azurerm_public_ip.fw-pip",
            "module.fw-east.data.azurerm_subnet.fw-sbnt",
            "module.fw-east.data.azurerm_subnet.fwmgmt-sbnt"
          ]
        }
      ]
    },
    {
      "module": "module.fw-east",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw-mgmt-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/publicIPAddresses/fwmgmt-eastus-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.224.193.37",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "fwmgmt-eastus-pip",
            "resource_group_name": "tcs-azcloud-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "fwmgmt-eastus-pip",
              "ResourceGroup": "tcs-azcloud-rg"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_bastion_host.bst-host",
            "module.Hub_east.azurerm_network_interface.hubapps-nic",
            "module.Hub_east.azurerm_network_interface.hubsrv-nic",
            "module.Hub_east.azurerm_public_ip.bst-pip",
            "module.Hub_east.azurerm_subnet.apps",
            "module.Hub_east.azurerm_subnet.bastion",
            "module.Hub_east.azurerm_subnet.fw",
            "module.Hub_east.azurerm_subnet.fw-mgmt",
            "module.Hub_east.azurerm_subnet.gw",
            "module.Hub_east.azurerm_subnet.servers",
            "module.Hub_east.azurerm_virtual_network.hub",
            "module.Hub_east.azurerm_windows_virtual_machine.apps-vm",
            "module.Hub_east.azurerm_windows_virtual_machine.srv-vm"
          ]
        }
      ]
    },
    {
      "module": "module.fw-east",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/publicIPAddresses/fw-eastus-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.224.193.180",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "fw-eastus-pip",
            "resource_group_name": "tcs-azcloud-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "fw-eastus-pip",
              "ResourceGroup": "tcs-azcloud-rg"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_bastion_host.bst-host",
            "module.Hub_east.azurerm_network_interface.hubapps-nic",
            "module.Hub_east.azurerm_network_interface.hubsrv-nic",
            "module.Hub_east.azurerm_public_ip.bst-pip",
            "module.Hub_east.azurerm_subnet.apps",
            "module.Hub_east.azurerm_subnet.bastion",
            "module.Hub_east.azurerm_subnet.fw",
            "module.Hub_east.azurerm_subnet.fw-mgmt",
            "module.Hub_east.azurerm_subnet.gw",
            "module.Hub_east.azurerm_subnet.servers",
            "module.Hub_east.azurerm_virtual_network.hub",
            "module.Hub_east.azurerm_windows_virtual_machine.apps-vm",
            "module.Hub_east.azurerm_windows_virtual_machine.srv-vm"
          ]
        }
      ]
    },
    {
      "module": "module.hub_peering",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.100.0.0/16"
            ],
            "guid": "db1e07e5-e9a2-44ef-a0e0-f43368b446d9",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus",
            "location": "centralus",
            "name": "vnet-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "subnets": [
              "Servers-centralus",
              "AzureFirewallSubnet",
              "AzureBastionSubnet",
              "GatewaySubnet",
              "Apps-centralus",
              "AzureFirewallManagementSubnet"
            ],
            "vnet_peerings": {
              "vnet-centralus-to-vnet-eastus": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus"
            }
          }
        }
      ]
    },
    {
      "module": "module.hub_peering",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.200.0.0/16"
            ],
            "guid": "b8c05887-161b-45d6-8fff-a391e709988b",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus",
            "location": "eastus",
            "name": "vnet-eastus",
            "resource_group_name": "tcs-azcloud-rg",
            "subnets": [
              "GatewaySubnet",
              "AzureFirewallSubnet",
              "Servers-eastus",
              "Apps-eastus",
              "AzureBastionSubnet",
              "AzureFirewallManagementSubnet"
            ],
            "vnet_peerings": {
              "vnet-eastus-to-vnet-centralus": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus"
            }
          }
        }
      ]
    },
    {
      "module": "module.hub_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/virtualNetworkPeerings/vnet-centralus-to-vnet-eastus",
            "name": "vnet-centralus-to-vnet-eastus",
            "remote_virtual_network_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus",
            "resource_group_name": "tcs-azcloud-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_virtual_network.hub",
            "module.Hub_east.azurerm_virtual_network.hub",
            "module.hub_peering.data.azurerm_virtual_network.vnet_01",
            "module.hub_peering.data.azurerm_virtual_network.vnet_02"
          ]
        }
      ]
    },
    {
      "module": "module.hub_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/virtualNetworkPeerings/vnet-eastus-to-vnet-centralus",
            "name": "vnet-eastus-to-vnet-centralus",
            "remote_virtual_network_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-eastus"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_virtual_network.hub",
            "module.Hub_east.azurerm_virtual_network.hub",
            "module.hub_peering.data.azurerm_virtual_network.vnet_01",
            "module.hub_peering.data.azurerm_virtual_network.vnet_02"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_east",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/eastus-spoke-vmnic",
            "internal_domain_name_suffix": "hqhwqvploozexdilrhuaigqhjh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "eastus-spoke-vm-ipconfig",
                "primary": true,
                "private_ip_address": "10.220.0.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-02/subnets/vm"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-23-11-65",
            "name": "eastus-spoke-vmnic",
            "private_ip_address": "10.220.0.10",
            "private_ip_addresses": [
              "10.220.0.10"
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "virtual_machine_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Compute/virtualMachines/eastus-spoke-vm"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_east.azurerm_subnet.vm",
            "module.spoke_east.azurerm_virtual_network.spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_east",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.220.0.0/24",
            "address_prefixes": [
              "10.220.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-02/subnets/vm",
            "name": "vm",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-eastus-02"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_east.azurerm_virtual_network.spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_east",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.220.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "55680f3c-73eb-4bb2-8d0b-89e8041a074f",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-02",
            "location": "eastus",
            "name": "vnet-eastus-02",
            "resource_group_name": "tcs-azcloud-rg",
            "subnet": [
              {
                "address_prefix": "10.220.0.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus-02/subnets/vm",
                "name": "vm"
              }
            ],
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_west",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/networkInterfaces/centralus-spoke-vmnic",
            "internal_domain_name_suffix": "jqyirc4lxkze1nr5qb0ykwkjaf.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "centralus-spoke-vm-ipconfig",
                "primary": true,
                "private_ip_address": "10.120.0.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-02/subnets/vm"
              }
            ],
            "location": "centralus",
            "mac_address": "00-0D-3A-A6-47-01",
            "name": "centralus-spoke-vmnic",
            "private_ip_address": "10.120.0.10",
            "private_ip_addresses": [
              "10.120.0.10"
            ],
            "resource_group_name": "tcs-azcloud-rg",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "virtual_machine_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Compute/virtualMachines/centralus-spoke-vm"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_west.azurerm_subnet.vm",
            "module.spoke_west.azurerm_virtual_network.spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_west",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.120.0.0/24",
            "address_prefixes": [
              "10.120.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-02/subnets/vm",
            "name": "vm",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-centralus-02"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.spoke_west.azurerm_virtual_network.spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_west",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.120.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8b88304c-bacb-4db2-b63f-807585594905",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-02",
            "location": "centralus",
            "name": "vnet-centralus-02",
            "resource_group_name": "tcs-azcloud-rg",
            "subnet": [
              {
                "address_prefix": "10.120.0.0/24",
                "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus-02/subnets/vm",
                "name": "vm"
              }
            ],
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpngw-centralus",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "vpngw-sbnt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.0.0/24",
            "address_prefixes": [
              "10.100.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-centralus"
          }
        }
      ]
    },
    {
      "module": "module.vpngw-centralus",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpngw-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/publicIPAddresses/vpn-gw-centralus",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.67.208.13",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "vpn-gw-centralus",
            "resource_group_name": "tcs-azcloud-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name:": "vpn-gw-centralus",
              "ResourceGroup": "tcs-azcloud-rg"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_bastion_host.bst-host",
            "module.Hub_centralus.azurerm_network_interface.hubapps-nic",
            "module.Hub_centralus.azurerm_network_interface.hubsrv-nic",
            "module.Hub_centralus.azurerm_public_ip.bst-pip",
            "module.Hub_centralus.azurerm_subnet.apps",
            "module.Hub_centralus.azurerm_subnet.bastion",
            "module.Hub_centralus.azurerm_subnet.fw",
            "module.Hub_centralus.azurerm_subnet.fw-mgmt",
            "module.Hub_centralus.azurerm_subnet.gw",
            "module.Hub_centralus.azurerm_subnet.servers",
            "module.Hub_centralus.azurerm_virtual_network.hub",
            "module.Hub_centralus.azurerm_windows_virtual_machine.apps-vm",
            "module.Hub_centralus.azurerm_windows_virtual_machine.srv-vm"
          ]
        }
      ]
    },
    {
      "module": "module.vpngw-centralus",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vpngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65010,
                "peer_weight": 0,
                "peering_address": "10.100.0.254",
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.100.0.254"
                    ],
                    "ip_configuration_name": "gwcentralus-ipcfg",
                    "tunnel_ip_addresses": [
                      "13.67.208.13"
                    ]
                  }
                ]
              }
            ],
            "enable_bgp": true,
            "generation": "Generation1",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworkGateways/vpn-gw-centralus",
            "ip_configuration": [
              {
                "name": "gwcentralus-ipcfg",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/publicIPAddresses/vpn-gw-centralus",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-centralus/subnets/GatewaySubnet"
              }
            ],
            "location": "centralus",
            "name": "vpn-gw-centralus",
            "private_ip_address_enabled": false,
            "resource_group_name": "tcs-azcloud-rg",
            "sku": "VpnGw1",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "vpn-gw-centralus",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_centralus.azurerm_bastion_host.bst-host",
            "module.Hub_centralus.azurerm_network_interface.hubapps-nic",
            "module.Hub_centralus.azurerm_network_interface.hubsrv-nic",
            "module.Hub_centralus.azurerm_public_ip.bst-pip",
            "module.Hub_centralus.azurerm_subnet.apps",
            "module.Hub_centralus.azurerm_subnet.bastion",
            "module.Hub_centralus.azurerm_subnet.fw",
            "module.Hub_centralus.azurerm_subnet.fw-mgmt",
            "module.Hub_centralus.azurerm_subnet.gw",
            "module.Hub_centralus.azurerm_subnet.servers",
            "module.Hub_centralus.azurerm_virtual_network.hub",
            "module.Hub_centralus.azurerm_windows_virtual_machine.apps-vm",
            "module.Hub_centralus.azurerm_windows_virtual_machine.srv-vm",
            "module.vpngw-centralus.azurerm_public_ip.vpngw-pip",
            "module.vpngw-centralus.data.azurerm_subnet.vpngw-sbnt"
          ]
        }
      ]
    },
    {
      "module": "module.vpngw-eastus",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "vpngw-sbnt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.200.0.0/24",
            "address_prefixes": [
              "10.200.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "tcs-azcloud-rg",
            "virtual_network_name": "vnet-eastus"
          }
        }
      ]
    },
    {
      "module": "module.vpngw-eastus",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpngw-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/publicIPAddresses/vpn-gw-eastus",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.215.68",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vpn-gw-eastus",
            "resource_group_name": "tcs-azcloud-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name:": "vpn-gw-eastus",
              "ResourceGroup": "tcs-azcloud-rg"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_bastion_host.bst-host",
            "module.Hub_east.azurerm_network_interface.hubapps-nic",
            "module.Hub_east.azurerm_network_interface.hubsrv-nic",
            "module.Hub_east.azurerm_public_ip.bst-pip",
            "module.Hub_east.azurerm_subnet.apps",
            "module.Hub_east.azurerm_subnet.bastion",
            "module.Hub_east.azurerm_subnet.fw",
            "module.Hub_east.azurerm_subnet.fw-mgmt",
            "module.Hub_east.azurerm_subnet.gw",
            "module.Hub_east.azurerm_subnet.servers",
            "module.Hub_east.azurerm_virtual_network.hub",
            "module.Hub_east.azurerm_windows_virtual_machine.apps-vm",
            "module.Hub_east.azurerm_windows_virtual_machine.srv-vm"
          ]
        }
      ]
    },
    {
      "module": "module.vpngw-eastus",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vpngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65020,
                "peer_weight": 0,
                "peering_address": "10.200.0.254",
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.200.0.254"
                    ],
                    "ip_configuration_name": "gweastus-ipcfg",
                    "tunnel_ip_addresses": [
                      "20.228.215.68"
                    ]
                  }
                ]
              }
            ],
            "enable_bgp": true,
            "generation": "Generation1",
            "id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworkGateways/vpn-gw-eastus",
            "ip_configuration": [
              {
                "name": "gweastus-ipcfg",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/publicIPAddresses/vpn-gw-eastus",
                "subnet_id": "/subscriptions/10d33b0d-f927-45f4-a5a2-dd2ef6a282eb/resourceGroups/tcs-azcloud-rg/providers/Microsoft.Network/virtualNetworks/vnet-eastus/subnets/GatewaySubnet"
              }
            ],
            "location": "eastus",
            "name": "vpn-gw-eastus",
            "private_ip_address_enabled": false,
            "resource_group_name": "tcs-azcloud-rg",
            "sku": "VpnGw1",
            "tags": {
              "Deployment_type": "Terraform",
              "Environment": "Azure",
              "Project": "LABTIME",
              "Resource Name": "vpn-gw-eastus",
              "ResourceGroup": "tcs-azcloud-rg"
            },
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.Hub_east.azurerm_bastion_host.bst-host",
            "module.Hub_east.azurerm_network_interface.hubapps-nic",
            "module.Hub_east.azurerm_network_interface.hubsrv-nic",
            "module.Hub_east.azurerm_public_ip.bst-pip",
            "module.Hub_east.azurerm_subnet.apps",
            "module.Hub_east.azurerm_subnet.bastion",
            "module.Hub_east.azurerm_subnet.fw",
            "module.Hub_east.azurerm_subnet.fw-mgmt",
            "module.Hub_east.azurerm_subnet.gw",
            "module.Hub_east.azurerm_subnet.servers",
            "module.Hub_east.azurerm_virtual_network.hub",
            "module.Hub_east.azurerm_windows_virtual_machine.apps-vm",
            "module.Hub_east.azurerm_windows_virtual_machine.srv-vm",
            "module.vpngw-eastus.azurerm_public_ip.vpngw-pip",
            "module.vpngw-eastus.data.azurerm_subnet.vpngw-sbnt"
          ]
        }
      ]
    }
  ]
}